@@ -22,11 +22,9 @@ navbar_dropdowns:
           url: http://nytimes.com
         - title: Fourth item
           url: http://google.com
-    - title: Another menu
+    - title: About
       folderitems:
-        - title: Getting Started
-          url: /index.html
-        - title: Content and Formatting
-          url: /jekyllhowto-content-and-formatting.html
-        - title: Sidebar navigation
-          url: /jekyllhowto-sidebar-navigation.html
+        - title: About Me
+          url: /about.html
+        - title: CV
+          url: /cv.html
