@@ -391,10 +391,6 @@ a[data-toggle="tooltip"] {
 	margin-top: 50px;
 }
 
-.cv-title {
-	margin-bottom: 60px;
-}
-
 .cv-title h1{
 	font-size: 60pt;
 }
