@@ -10,12 +10,20 @@ layout: null
     if (results.length) { // Are there any results?
       var appendString = '';
 
-       // for (var i = 0; i < results.length; i++) {  // Iterate over the results
-        for (var i = 0; i < results.length && i < 10; i++) {  // Iterate over the results
-        var item = store[results[i].ref];
-        appendString += '<a href="' + item.url + '"><h4 style="font-size:20pt;">' + item.title + '</h4></a>';
-        appendString += '<p style="font-size: 16px;">' + item.summary + '</p>';
-		appendString += '<p style="font-size: 10pt; margin-top: -10px; padding-bottom: 25px; margin-bottom: 25px; border-bottom: 1px solid #777;">Type: ' + item.type + '</p>';
+           // for (var i = 0; i < results.length; i++) {  // Iterate over the results
+           for (var i = 0; i < results.length && i < 10; i++) 
+            {  // Iterate over the results
+            var item = store[results[i].ref];
+            
+           if(item.title.length > 0 && !item.url.includes(".xml"))
+           
+           {
+            
+            appendString += '<a href="' + item.url + '"><h4 style="font-size:20pt;">' + item.title + '</h4></a>';
+            appendString += '<p style="font-size: 16px;">' + item.summary + '</p>';
+		    appendString += '<p style="font-size: 10pt; margin-top: -10px; padding-bottom: 25px; margin-bottom: 25px; border-bottom: 1px solid #777;">Type: ' + item.type + '</p>';
+          }
+          
       }
 
       searchResults.innerHTML = appendString;
