@@ -1,3 +1,7 @@
+11-18-2024:
+- Minor blog re-arrangements.
+- Cleaned up output for search.
+
 9-16-2024:
 - Added date feature to blog.
 
